--- a/isikategori.html
+++ b/isikategori.html
@@ -3,9 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FHRODE | Blush On</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+@media only screen and (max-width: 500px) {
+
+    .ctg{
+margin-left:25px;
+display: flex;
+flex-direction: column;
+    }
+    .topnav a{
+      margin-top: 5%;
+      display: flex;
+      width: 100%;
+    }
+  
+  }
+</style>
 </head>
+
+
 <body>
+   
+  
+  <div class="topnav">
+    <a href="main.html" style="float: left; left:4%; position: fixed; color: #A17D60;"><i class="fa fa-fw fa-home"></i></a>
+</div>
     
+    <section id="category" class="four" style="display:flex; flex-direction:column; margin-top: 2%; ">
+        <h1 style="justify-items: center; width: 100%; height: auto; color: #CB516D; margin-top: 30px;">BLUSH ON</h1>    
+<div class="ctg">
+    <div class="list-produk">
+      <a href="#">
+        <img src="images/blush2.jpg" alt="blush" style="width: 100%; height: auto;"> </a>
+    </div>
+
+    <div class="list-produk">
+      <a href="#">
+        <img src="images/blush3.jpg" alt="Eyeshadow" style="width: 100%; height: auto;"> </a>
+    </div>
+
+    <div class="list-produk">
+      <a href="#"> 
+      <img src="images/blush4.jpg" alt="Eyeliner" style="width: 100%; height: auto;"> </a>
+    </div>
+
+    <div class="list-produk">
+      <a href="#">
+        <img src="images/blush5.jpg" alt="Cheeks" style="width: 100%; height: auto;"> </a>
+    </div>        
+    </div>
+
+    <div class="ctg">
+      <div class="list-produk">
+        <a href="#">
+          <img src="images/blush6.jpg" alt="Lashes" style="width: 100%; height: auto;"> </a>
+      </div>
+
+      <div class="list-produk">
+        <a href="#">
+          <img src="images/blush7.jpg" alt="Face" style="width: 100%; height: auto;"></a>
+      </div>
+
+      <div class="list-produk">
+        <a href="#">
+          <img src="images/blush8.jpg" alt="Makeup Tools" style="width: 100%; height: auto;"></a>
+      </div>
+
+      <div class="list-produk">
+        <a href="review.html">
+          <img src="images/blush1.jpeg" alt="Eyebrow" style="width: 100%; height: auto;"></a>
+      </div>
+  </div>
+    </section>
+
 </body>
 </html>
