--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form | STAFF</title>
-  <link rel="stylesheet" href="styles.css">
+  <title> FHRODE Login Form | STAFF</title>
+  <link rel="stylesheet" href="login.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -21,7 +21,7 @@
         <input type="password" placeholder="Password" required>
         <i class='bx bxs-lock-alt' ></i>
       </div>
-      <button type="submit" class="btn">Login</button>
+      <button type="submit" class="btn"><a href="dashboard.html" style="color: #413b3bcb;font-weight: bold; text-decoration: none;">LOGIN</a></button>
       <div class="register-link">
         <p>Cancel login? Back to<a href="main.html"> HOME</a></p>
       </div>
